# old_bevy_simulo_prototype

./: Cargo.toml  README.md
.cargo/: config.toml
assets/shaders/: matter.wgsl
src/: main.rs  main.sh  murder.py
