[package]
name = "simulo_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_egui = "0.23.0"
bevy_pancam = { version = "0.10.0", features = ["bevy_egui"] }
bevy_prototype_lyon = "0.10.0"
bevy_rapier2d = "0.23.0"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
